<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="4"
    android:columnCount="2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:text="@string/top_message"
        android:textSize="30dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_weight="1"
        android:layout_rowSpan="2"
        android:gravity="fill"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/switchBox"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:text="@string/switchbox"
        android:contentDescription="switchBox"/>


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/button" />


    <Space
        android:layout_width="16dp"
        android:layout_height="1dp"
        android:layout_row="2"
        android:layout_column="1" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="end"
        android:paddingStart="1dp"
        android:text="@string/checkbox" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_row="3"
        android:layout_column="0"
        android:textColor="@color/black"
        android:layout_columnSpan="2"
        android:hint="@string/android_hint"/>

</GridLayout>
